# cargo-geng

./: .gitignore  .justfile  Cargo.toml  Dockerfile  README.md  docker.sh  flake.nix  old.nix
.github/workflows/: flow.yml
flake-module/: android.nix  default.nix  linux.nix  populate.nix  rust.nix  web.nix  windows.nix
src/: args.rs  cargo_geng.rs  index.html  main.rs  util.rs  wasm_bindgen.rs  wasm_opt.rs
src/platform/: mod.rs  web.rs
