[package]
name = "cargo-geng"
authors = ["kuviman <kuviman@gmail.com>"]
categories = ["game-engines"]
description = "geng cargo helper"
edition = "2021"
homepage = "https://geng.kuviman.com"
keywords = ["game", "engine", "gamedev", "geng"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/geng-engine/cargo-geng"
version = "0.16.0"

[features]
default = []
wast-opt = ["dep:wasm-opt"]

[dependencies]
open = "5"
tokio = { version = "1", features = ["rt-multi-thread", "full"] }
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
hyper-staticfile = "0.9"
fs_extra = "1"
cargo_metadata = "0.18"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = { version = "1", features = ["backtrace"] }
wasm-bindgen-cli-support = "0.2"
wasm-opt = { version = "0.116", optional = true }
serde = "1"
serde_json = "1"
itertools = "0.11.0"
strum = { version = "0.25.0", features = ["derive"] }
log = "0.4.20"
env_logger = "0.10.0"
